# api-test-agent

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  development.md  skills-guide.md
docs/plans/: 2026-02-22-code-validation-design.md  2026-02-22-layered-architecture-design.md
src/api_test_agent/: __init__.py  cli.py
src/api_test_agent/generator/: code.py  layered.py  testcase.py  validator.py
src/api_test_agent/parser/: base.py  detect.py  markdown.py  postman.py  swagger.py
src/api_test_agent/prompts/: code.md  layered_api.md  layered_data.md  layered_services.md  layered_tests.md  testcase.md
src/api_test_agent/skills/: loader.py
src/api_test_gen/: cli.py  llm.py
tests/: test_cli.py  test_code_generator.py  test_integration.py  test_layered_generator.py  test_llm.py  test_markdown_parser.py  test_models.py  test_postman_parser.py  test_skills.py  test_swagger_parser.py  test_testcase_generator.py  test_validator.py
